--- a/jvfluxcompagnon.css
+++ b/jvfluxcompagnon.css
@@ -7,6 +7,7 @@
   opacity: 0.8;
   cursor: help;
   text-decoration: underline dotted;
+  font-weight: 600;
   position: relative;
   overflow: visible;
 }
